🚀[Release v.2.9.1-20240326] Merge into Main (#172)
* 💣🐞[Hotbug fix] sharedprefs fb fix (#19)

* Added notes

* Bugfix - add missing pendingIntent flag for android 13

* Use firebase bom

* subproject commit

* version bump

* Disabled FB send, Added Get Tasks

* Patch to hard code fees

- Static fees
- Removed the dep
- Turn crashlytics back on/off/on

Co-authored-by: Victor Sima <vic.sima@gmail.com>

* Feature/update branding (#29)

* added new logo

- reset the layout

* version code

* Delete ISSUE_TEMPLATE

* Create test.md

* Delete test.md

* 🚀[ Release v.2.7.0] Merge into Develop (#32)

* replaced coin logo

* bump versioncode

* fixed dep version

* added Bitrefill web listener

* [Techdebt/] pdate match firebase events 33 (#48)

* Added the equivalenmt events

- updated web link

* WIP : Should compile

* Fixed constants

* Udpaded all Analytics constants

* Added basic tests

- This is WIP
- Need to debug the Tests

* version bump

* fiexd compile bug

* 🚀[ Release v.2.7.1] Merge into Develop (#104)

* 🚀[ Release v.2.7.0] Merge into Main (#30)

* Added український language

- add uk xml file
-  removed the nl, sv, da files
- Escaped apostrphes in UK strings file
- Updated language choices

* 💣🐞[Hotbug fix] sharedprefs fb fix (#19)

* Added notes

* Bugfix - add missing pendingIntent flag for android 13

* Use firebase bom

* subproject commit

* version bump

* Disabled FB send, Added Get Tasks

* Patch to hard code fees

- Static fees
- Removed the dep
- Turn crashlytics back on/off/on

Co-authored-by: Victor Sima <vic.sima@gmail.com>

* 🚀[ Release v.2.6.0] Merge into Develop  (#13)

* version bump

* Hotfix/crashes v2.6.0 (#17)

* Added notes

* Bugfix - add missing pendingIntent flag for android 13

* Use firebase bom

Co-authored-by: kcw-grunt <mrkerrywashington@icloud.com>

Co-authored-by: Victor Sima <vic.sima@gmail.com>

* 🚀[Release] v